fix: #techStack not centered in desktop resolution

--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -688,7 +688,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 80px auto;
+    margin: 80px auto !important;
   }
   #techStackSubsection #techStack {
     font-size: 24px;
